Use CSS to create slider arrows
Closes #360

--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -749,13 +749,35 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	display: none;
 }
 
-#wpo-wcpdf-preview-wrapper .slider:hover {
-	color: #222;
+#wpo-wcpdf-preview-wrapper .gutter-arrow {
+	width: 0; 
+	height: 0; 
+	border-top: 3px solid transparent;
+	border-bottom: 3px solid transparent; 
+	display: block;
+}
+
+#wpo-wcpdf-preview-wrapper .arrow-left {
+	border-right: 7px solid #999;
+	float: right;
+}
+
+#wpo-wcpdf-preview-wrapper .arrow-right {
+	border-left: 7px solid #999;
+}
+
+#wpo-wcpdf-preview-wrapper .slider:hover > .arrow-left {
+	border-right: 7px solid #222; 
+}
+
+#wpo-wcpdf-preview-wrapper .slider:hover > .arrow-right {
+	border-left: 7px solid #222; 
 }
 
 #wpo-wcpdf-preview-wrapper .slider.slide-left:after {
 	content: 'Preview';
 	position: absolute;
+	top: 1.55em;
 	right: 2em;
 	font-size: 1.4em;
 	display: none;
@@ -764,6 +786,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 #wpo-wcpdf-preview-wrapper .slider.slide-right:after {
 	content: 'Settings';
 	position: absolute;
+	top: 1.55em;
 	left: 2em;
 	font-size: 1.4em;
 	display: none;
