Adds a notice for Pro in the Packing Slip settings
#379

--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -392,6 +392,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	border-left: 4px solid #51266b;
 }
 
+#wpo-wcpdf-settings .notice-info.inline {
+	border-left-color: #51266b;
+}
+
 #wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar {
 	flex: 0 0 100%;
 }
