--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -91,8 +91,11 @@ img.wpo-helper {
 }
 
 .multiple-text-input label {
-	min-width: 120px;
-	display: inline-block;
+	padding-right: 1em;
+}
+
+table.multiple-text-input td {
+	padding: 0;
 }
 
 table.wcpdf_documents_settings_list {
