Add styles to improve the Number format layout for mobile devices

--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -904,4 +904,15 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	#wpo-wcpdf-preview-wrapper .slider.slide-left:after {
 		right: 0;
 	}
+	#wpo-wcpdf-preview-wrapper .multiple-text-input tr td:nth-child(2),
+	#wpo-wcpdf-preview-wrapper .multiple-text-input tr td:nth-child(3) {
+		float: left;
+		margin-bottom: 10px;
+	}
+
+	#wpo-wcpdf-preview-wrapper .multiple-text-input tr td .woocommerce-help-tip:after {
+		padding: 0.5em 0.8em;
+		font-size: 1.2em;
+		line-height: inherit;
+	}
 }
