--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -226,6 +226,22 @@ table.wcpdf_documents_settings_list td.title {
 	cursor:pointer;
 }
 
+/* Pointers */
+
+.wpo-wcpdf-pointer.wp-pointer-top .wp-pointer-arrow,
+.wpo-wcpdf-pointer.wp-pointer-top .wp-pointer-arrow-inner {
+		border-bottom-color: #51266b;
+}
+
+.wpo-wcpdf-pointer .wp-pointer-content h3 {
+	border-color: #51266b;
+	background: #51266b;
+}
+
+.wpo-wcpdf-pointer .wp-pointer-content h3:before {
+	color: #51266b;
+}
+
 /* Preview */
 
 body.woocommerce_page_wpo_wcpdf_options_page {
