Break the long URLs within the order data

--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -122,7 +122,8 @@ table.order-data-addresses {
 	margin-bottom: 10mm;
 }
 
-table.order-data-addresses td.address {
+table.order-data-addresses td.address,
+table.order-data-addresses td.order-data {
 	overflow-wrap: anywhere;
 }
 
