Improve send emails meta box styles

--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -33,6 +33,11 @@
 	width: 110px;
 }
 
+.wpo_wcpdf_send_emails .inside {
+	margin: 0;
+	padding: 0;
+}
+
 @media screen and (max-width: 782px) {
 	.wp-list-table .column-pdf_invoice_number, .wp-list-table tr:not(.inline-edit-row):not(.no-items) td.column-pdf_invoice_number:not(.check-column) {
 		display: none;
