--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -1,32 +1,26 @@
-/* Order list buttons: */
-.type-shop_order .column-wc_actions a.button.wpo_wcpdf, /* pre WC 7.1 */
-.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf {
-	padding: 3px 2px 1px 1px !important;
+/* wc orders list */
+.type-shop_order .column-wc_actions a.button.wpo_wcpdf,
+.type-shop_order .column-wc_actions a.button.wpo_wcpdf:hover,
+.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf,
+.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf:hover {
+	background-repeat: no-repeat;
+	background-position: center;
+	text-align: center;
+	background-size: 16px 16px;
 }
-
-.type-shop_order .column-wc_actions a.button.wpo_wcpdf.exists::after, /* pre WC 7.1 */
-.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf.exists::after {
-	content: "\f147";
-	position:absolute;
-	font-size:16px;
-	left:7px;
-	color:#2aad2a;
+.type-shop_order .column-wc_actions a.button.wpo_wcpdf > span,
+.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf > span {
+	display: block;
+	position: absolute;
+	width: 5px;
+	height: 5px;
+	bottom: 2px;
+	right: 2px;
+	border: 2px solid #f6f7f7;
 }
-
-.wpo_wcpdf-actions a.button.exists::after {
-	font-family: Dashicons;
-	content: "\f147";
-	font-size: 125%;
-	line-height: 80%;
-	margin-left: 4px;
-	color: #2aad2a;
-	vertical-align: middle;
-}
-
-.type-shop_order .column-order_actions a.button.wpo_wcpdf img, /* legacy: 3.2 & older */
-.type-shop_order .column-wc_actions a.button.wpo_wcpdf img, /* pre WC 7.1 */
-.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf img {
-	width: 16px;
+.type-shop_order .column-wc_actions a.button.wpo_wcpdf > span.exists,
+.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf > span.exists {
+	background-color: #2aad2a;
 }
 
 .widefat .column-pdf_invoice_number {
