--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -8,19 +8,27 @@
 	text-align: center;
 	background-size: 16px 16px;
 }
-.type-shop_order .column-wc_actions a.button.wpo_wcpdf > span,
-.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf > span {
+
+.type-shop_order .column-wc_actions a.button.wpo_wcpdf > svg,
+.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf > svg {
 	display: block;
 	position: absolute;
-	width: 5px;
-	height: 5px;
-	bottom: 2px;
+	width: 10px;
+	height: 10px;
+	bottom: 1px;
 	right: 2px;
-	border: 2px solid #f6f7f7;
+	fill: #2aad2a;
+	background: #f6f7f7;
 }
-.type-shop_order .column-wc_actions a.button.wpo_wcpdf > span.exists,
-.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf > span.exists {
-	background-color: #2aad2a;
+
+.wpo_wcpdf-actions a.button.exists > svg {
+	width: 14px;
+	height: 14px;
+	line-height: 30px;
+	margin-left: 4px;
+	margin-bottom: 3px;
+	fill: #2aad2a;
+	vertical-align: middle;
 }
 
 .widefat .column-pdf_invoice_number {
