--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -43,7 +43,8 @@
 	vertical-align: middle;
 }
 
-.wpo_wcpdf-actions .printed-date {
+.wpo_wcpdf-actions .printed-date,
+.wcpdf-data-fields .printed-date {
 	font-size: 8pt;
 	color: #51266b;
 	margin-left: 5px;
@@ -51,7 +52,8 @@
 	margin-top: 3px;
 }
 
-.wpo_wcpdf-actions .printed-date > svg {
+.wpo_wcpdf-actions .printed-date > svg,
+.wcpdf-data-fields .printed-date > svg {
 	width: 14px;
 	height: 14px;
 	background: #f6f7f7;
@@ -155,6 +157,11 @@
  	-webkit-animation: spin 1.6s linear infinite; /* Safari */
  	animation: spin 1.6s linear infinite;
  	pointer-events: none;
+}
+
+.wcpdf-data-fields .printed-date {
+	float: right;
+	font-weight: normal;
 }
 
 /* Safari */
