--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -270,7 +270,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 }
 
 .nav-tab-wrapper a.nav-tab.nav-tab-active {
-	border-bottom: 3px solid #6e1edc;
+	border-bottom: 3px solid #51266b;
 }
 
 #wpo-wcpdf-preview-wrapper {
@@ -870,7 +870,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	}
 
 	.nav-tab-wrapper a.nav-tab.nav-tab-active {
-		border: 3px solid #6e1edc;
+		border: 3px solid #51266b;
 	}
 }
 
