--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -150,7 +150,6 @@ table.wcpdf_documents_settings_list td.title {
 }
 
 .wcpdf_document_settings_sections {
-	margin-bottom: 40px;
 	position: relative;
 }
 
@@ -219,6 +218,10 @@ table.wcpdf_documents_settings_list td.title {
 .wcpdf_document_settings_sections p:hover,
 .wcpdf_document_settings_sections p:hover > .arrow-down { 
 	color: #222;
+}
+
+.wcpdf_document_settings_document_outputs {
+	margin-bottom: 30px;
 }
 
 .edit-next-number {
@@ -309,18 +312,18 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	max-width: none;
 }
 
-	#wpo-wcpdf-preview-wrapper .sidebar .form-table,
-	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr,
-	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > th,
-	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td,
-	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody,
-	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr,
-	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > th,
-	#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td {
-		display: block;
-		width: 100%;
-		padding: 0;
-	}
+#wpo-wcpdf-preview-wrapper .sidebar .form-table,
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr,
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > th,
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td,
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody,
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr,
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > th,
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td {
+	display: block;
+	width: 100%;
+	padding: 0;
+}
 
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > th,
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > th {
