--- a/assets/css/order-styles.css
+++ b/assets/css/order-styles.css
@@ -26,6 +26,13 @@
 	fill: #2aad2a;
 }
 
+.type-shop_order .column-wc_actions a.button.wpo_wcpdf.ubl > svg.icon-ubl,
+.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf.ubl > svg.icon-ubl {
+	left: auto;
+	right: 2px;
+	fill: black;
+}
+
 .type-shop_order .column-wc_actions a.button.wpo_wcpdf.printed > svg.icon-printed,
 .woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf.printed > svg.icon-printed {
 	left: 2px;
