Update the style.css to not break long characters just for order-data table

--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -125,7 +125,7 @@ table.order-data-addresses {
 
 table.order-data-addresses td.address,
 table.order-data-addresses td.order-data {
-	overflow-wrap: anywhere;
+	overflow-wrap: break-word;
 }
 
 td.order-data {
