Fix: revert breaking long characters in order data labels (#540)

--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -140,6 +140,7 @@ td.order-data table th {
 	font-weight: normal;
 	padding-right: 2mm;
 	width: 50%;
+	overflow-wrap: break-word;
 }
 
 .invoice .shipping-address {
