--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -101,7 +101,7 @@ table.head {
 }
 
 td.header img {
-	max-height: 3cm; /* may be overriden by the settings */
+	max-height: 3cm; /* may be overridden by the settings */
 	width: auto;
 }
 
@@ -117,7 +117,7 @@ td.shop-info {
 	text-transform: uppercase;
 }
 
-/* Recipient addressses & order data */
+/* Recipient addresses & order data */
 table.order-data-addresses {
 	width: 100%;
 	margin-bottom: 10mm;
