Improves description display hidden

--- a/assets/css/debug-tools.css
+++ b/assets/css/debug-tools.css
@@ -34,6 +34,7 @@ form#wpo-wcpdf-settings {
 	max-width: 25rem;
 }
 
-#document_custom_redirect_page {
+#document_custom_redirect_page,
+#document_custom_redirect_page + .description {
 	display: none;
 }
