--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -220,6 +220,10 @@ table.wcpdf_documents_settings_list td.title {
 	color: #222;
 }
 
+.wcpdf_advanced_numbers_choose_table {
+	margin-top: 20px;
+}
+
 .wcpdf_document_settings_document_output_formats {
 	margin-bottom: 30px;
 }
@@ -263,7 +267,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	margin: 15px 0 0;
 }
 
-.nav-tab-wrapper a.nav-tab {
+.nav-tab-wrapper:not( .wcpdf_debug_settings_sections > .nav-tab-wrapper) a.nav-tab {
 	background: transparent;
 	border: none;
 	border-bottom: 3px solid transparent;
@@ -272,7 +276,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	font-size: 15px;
 }
 
-.nav-tab-wrapper a.nav-tab.nav-tab-active {
+.nav-tab-wrapper:not( .wcpdf_debug_settings_sections > .nav-tab-wrapper) a.nav-tab.nav-tab-active {
 	border-bottom: 3px solid #51266b;
 }
 
@@ -433,6 +437,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	padding-top: 0;
 	padding-bottom: 6px;
 	font-size: 12px;
+}
+
+#wpo-wcpdf-settings .system-status-table {
+	margin-top: 2em;
 }
 
 #wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar {
