--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -273,6 +273,12 @@ table.wcpdf_documents_settings_list td.title {
 	margin-top: 20px;
 }
 
+.wcpdf_advanced_numbers_choose_table .number-table-data-info {
+	border-top: 1px solid #eaeaea;
+	border-bottom: 1px solid #eaeaea;
+	margin-bottom: 20px;
+}
+
 .wcpdf_document_settings_document_output_formats {
 	margin-bottom: 30px;
 }
