--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -279,6 +279,13 @@ table.wcpdf_documents_settings_list td.title {
 	margin-bottom: 20px;
 }
 
+.wcpdf_advanced_numbers_choose_table .gapped {
+	background-color: #d63638;
+	color: white;
+	padding: 3px 6px;
+	border-radius: 3px;
+}
+
 .wcpdf_document_settings_document_output_formats {
 	margin-bottom: 30px;
 }
