--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -114,6 +114,12 @@ td.header {
 td.shop-info {
 	width: 40%;
 }
+
+td.shop-info span {
+	display: block;
+	clear: both;
+}
+
 .document-type-label {
 	text-transform: uppercase;
 }
@@ -127,6 +133,11 @@ table.order-data-addresses {
 table.order-data-addresses td.address,
 table.order-data-addresses td.order-data {
 	overflow-wrap: anywhere;
+}
+
+table.order-data-addresses td.address span {
+	display: block;
+	clear: both;
 }
 
 td.order-data {
