--- a/templates/Simple/style.css
+++ b/templates/Simple/style.css
@@ -44,8 +44,7 @@ ul {
 	padding: 0;
 }
 
-li,
-ul {
+li {
 	margin-bottom: 0.75em;
 }
 
@@ -59,7 +58,6 @@ p + p {
 }
 
 a {
-	border-bottom: 1px solid;
 	text-decoration: none;
 }
 
@@ -79,7 +77,7 @@ th, td {
 }
 
 table.container {
-	width:100%;
+	width: 100%;
 	border: 0;
 }
 
@@ -92,7 +90,7 @@ td.no-borders {
 	width: auto;
 }
 
-td.notes-cell{
+td.notes-cell {
 	width: 60%;
 }
 
@@ -173,7 +171,7 @@ td.order-data table th {
 /* Order details */
 table.order-details,
 table.notes-totals {
-	width:100%;
+	width: 100%;
 	margin-bottom: 8mm;
 	page-break-before: avoid;
 }
@@ -193,8 +191,8 @@ table.notes-totals {
 .order-details th,
 .notes-totals td,
 .notes-totals th {
-	border-bottom: 1px #ccc solid;
-	border-top: 1px #ccc solid;
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #ccc;
 	padding: 0.375em;
 }
 
@@ -226,18 +224,13 @@ table.notes-totals {
 
 /* item meta formatting */
 .wc-item-meta,
-ul.meta {
+.meta {
 	margin: 4px 0;
 	font-size: 7pt;
 	line-height: 7pt;
 	overflow-wrap: anywhere;
 }
-.wc-item-meta p,
-ul.meta p {
-	display: inline;
-}
-.wc-item-meta li,
-ul.meta li {
+.wc-item-meta li {
 	margin: 0;
 	margin-left: 5px;
 }
@@ -296,6 +289,7 @@ table.totals tr.payment_method {
 .pagenum:before {
 	content: counter(page);
 }
+
 .pagenum,.pagecount {
 	font-family: sans-serif;
 }
