--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -1120,7 +1120,8 @@ div.upgrade-table-description a,
 	font-size: 0.8em;
 }
 
-#upgrade-table .upgrade-links a.upgrade_button {
+#upgrade-table .upgrade-links a.upgrade_button,
+#plugin-recommendations .card a.upgrade_button {
 	display: inline-block;
 	background: white;
 	padding: 1em 3em 1em 2em;
@@ -1131,7 +1132,8 @@ div.upgrade-table-description a,
 	position: relative;
 }
 
-#upgrade-table .upgrade-links a.upgrade_button:after {
+#upgrade-table .upgrade-links a.upgrade_button:after,
+#plugin-recommendations .card a.upgrade_button:after {
 	content: ' \2192'; /* ASCII code for right arrow */
 	display: block;
 	position: absolute;
@@ -1140,14 +1142,17 @@ div.upgrade-table-description a,
 	transition: 0.5s;
 }
 
-#upgrade-table .upgrade-links a.upgrade_button:hover:after {
+#upgrade-table .upgrade-links a.upgrade_button:hover:after,
+#plugin-recommendations .card a.upgrade_button:hover:after {
 	right: 1.1em;
 	font-weight: bold;
 }
 
 
 #upgrade-table .upgrade-links a.upgrade_button:focus,
-#upgrade-table .upgrade-links a.upgrade_button:hover {
+#upgrade-table .upgrade-links a.upgrade_button:hover,
+#plugin-recommendations .card a.upgrade_button:focus,
+#plugin-recommendations .card a.upgrade_button:hover {
 	background: #6e1edc;
 	color: #fcfbf7;
 }
@@ -1155,15 +1160,15 @@ div.upgrade-table-description a,
 #plugin-recommendations {
 	border-radius: 5px;
     background-color: #f1e9fc;
+	padding: 3em;
 }
 
 #plugin-recommendations .card-container {
-    width: calc(100% - 30px);
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    padding: 15px;
-	padding-bottom: 50px;
+	max-width: 1100px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 3em;
+    padding: 2em 0;
 }
 
 #plugin-recommendations .card {
@@ -1173,7 +1178,6 @@ div.upgrade-table-description a,
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	padding: 15px;
 	box-sizing: border-box;
-	text-align: center;
 }
 
 #plugin-recommendations .card.installed .card-content {
@@ -1196,42 +1200,6 @@ div.upgrade-table-description a,
 
 #plugin-recommendations .card p {
 	text-align: left;
-}
-
-#plugin-recommendations .card .button {
-	display: inline-block;
-	background: white;
-	padding: 1em 3em 1em 2em;
-	border-radius: 12px;
-	border: 1px solid #6e1edc;
-	text-decoration: none;
-	margin: 2em 0;
-	position: relative;
-}
-
-#plugin-recommendations .card .button:after {
-	content: ' \2192'; /* ASCII code for right arrow */
-	display: block;
-	position: absolute;
-	right: 1.8em;
-	top: 1.1em;
-	transition: 0.5s;
-}
-
-#plugin-recommendations .card .button:hover:after {
-	right: 1.1em;
-	font-weight: bold;
-}
-
-
-#plugin-recommendations .card .button:focus,
-#plugin-recommendations .card .button:hover {
-	background: #6e1edc;
-	color: #fcfbf7;
-}
-
-#plugin-recommendations .card.installed .button {
-	display: none;
 }
 
 #plugin-recommendations .card.last-item {
@@ -1264,6 +1232,10 @@ div.upgrade-table-description a,
 
 	#upgrade-table td.feature-label span.description {
 		padding-top: 6px;
+	}
+
+	#plugin-recommendations .card-container {
+		grid-template-columns: repeat(1, 1fr);
 	}
 }
 
