--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -1121,7 +1121,7 @@ div.upgrade-table-description a,
 }
 
 #upgrade-table .upgrade-links a.upgrade_button,
-#plugin-recommendations .card a.upgrade_button {
+#plugin-recommendations .recommendation-card a.upgrade_button {
 	display: inline-block;
 	background: white;
 	padding: 1em 3em 1em 2em;
@@ -1133,7 +1133,7 @@ div.upgrade-table-description a,
 }
 
 #upgrade-table .upgrade-links a.upgrade_button:after,
-#plugin-recommendations .card a.upgrade_button:after {
+#plugin-recommendations .recommendation-card a.upgrade_button:after {
 	content: ' \2192'; /* ASCII code for right arrow */
 	display: block;
 	position: absolute;
@@ -1143,24 +1143,23 @@ div.upgrade-table-description a,
 }
 
 #upgrade-table .upgrade-links a.upgrade_button:hover:after,
-#plugin-recommendations .card a.upgrade_button:hover:after {
+#plugin-recommendations .recommendation-card a.upgrade_button:hover:after {
 	right: 1.1em;
 	font-weight: bold;
 }
 
-
 #upgrade-table .upgrade-links a.upgrade_button:focus,
 #upgrade-table .upgrade-links a.upgrade_button:hover,
-#plugin-recommendations .card a.upgrade_button:focus,
-#plugin-recommendations .card a.upgrade_button:hover {
+#plugin-recommendations .recommendation-card a.upgrade_button:focus,
+#plugin-recommendations .recommendation-card a.upgrade_button:hover {
 	background: #6e1edc;
 	color: #fcfbf7;
 }
 
 #plugin-recommendations {
-	border-radius: 5px;
+	border-radius: 8px;
     background-color: #f1e9fc;
-	padding: 3em;
+	padding: 4em 3em;
 }
 
 #plugin-recommendations .card-container {
@@ -1171,45 +1170,59 @@ div.upgrade-table-description a,
     padding: 2em 0;
 }
 
-#plugin-recommendations .card {
+#plugin-recommendations .recommendation-card {
 	margin-top: 0;
-	width: min-content;
-	border: 1px solid #ccc;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	padding: 15px;
+	border-radius: 6px;
+	background-color: white;
+	box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
 	box-sizing: border-box;
+	font-size: 15px;
+	overflow: hidden;
+	transition: 0.2s;
 }
 
-#plugin-recommendations .card.installed .card-content {
+#plugin-recommendations .recommendation-card:hover {
+	scale: 1.02;
+}
+
+#plugin-recommendations .recommendation-card.currently-installed {
 	opacity: 0.5;
-}
-
-#plugin-recommendations .card.installed p:before {
-	display: none; /* Needed to override common.css */
-}
-
-#plugin-recommendations .card img {
-	width: 100%;
-}
-
-#plugin-recommendations .card h5 {
-	text-align: left;
-    font-size: 1.4em;
-    font-weight: bold;
-}
-
-#plugin-recommendations .card p {
-	text-align: left;
-}
-
-#plugin-recommendations .card.last-item {
 	order: 999;
 }
 
-#plugin-recommendations .card span.installed {
-	font-size: 1.1em;
+#plugin-recommendations .recommendation-card .card-content{
+	padding: 0 2em 3em;
+}
+
+#plugin-recommendations .recommendation-card img {
+	width: 100%;
+}
+
+#plugin-recommendations .recommendation-card h5 {
+	text-align: left;
+    font-size: 1.4em;
+	line-height: 1.3em;
     font-weight: bold;
-	font-style: italic;
+	margin: 1em 0;
+}
+
+#plugin-recommendations .recommendation-card p {
+	text-align: left;
+	padding-bottom: 10px;
+}
+
+#plugin-recommendations .recommendation-card a.upgrade_button {
+	margin: 0;
+}
+
+#plugin-recommendations .recommendation-card span.currently-installed {
+	font-size: 0.7em;
+	color: white;
+	background-color: #6e1edc;
+	padding: 1em 2em;
+	border-radius: 12px;
+	margin: 0;
+	display: inline-block;
 }
 
 @media screen and (max-width: 1100px) {
@@ -1235,7 +1248,14 @@ div.upgrade-table-description a,
 	}
 
 	#plugin-recommendations .card-container {
+		grid-gap: 2em;
+	}
+}
+
+@media screen and (max-width: 968px) {
+	#plugin-recommendations .card-container {
 		grid-template-columns: repeat(1, 1fr);
+		padding-right: 40%;
 	}
 }
 
@@ -1243,14 +1263,18 @@ div.upgrade-table-description a,
 	#upgrade-table td.feature-label span.description {
 		display: none;
 	}
-
+	
 	#upgrade-table th:not(.last),
 	#upgrade-table td:not(.last) {
 		width: 20%;
 	}
-
+	
 	#upgrade-table td.first {
 		width: 40%;
+	}
+
+	#plugin-recommendations .card-container {
+		padding-right: 0;
 	}
 }
 
